# commit-to-discord

./: .gitignore  .pre-commit-config.yaml  .sample.env  Dockerfile  Makefile  README.md  commit_watcher.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml  pylint.yml
utils/: __init__.py  logging.py  types.py
